Changed the confetti to cover the whole screen and is based on the innerwidth and height of any browser. Also the footerbar div is transparent and will no longer block cards if the vw is too small and it has to expand vertically down

--- a/src/components/css_files/headerFooterBar.css
+++ b/src/components/css_files/headerFooterBar.css
@@ -62,9 +62,8 @@
     position: absolute;
     width: 100vw;
     height: 50px;
-    /* background-color: blue; */
-    background-color: white;
-    z-index: 100;
+    background-color: rgb(255, 255, 255, 0);
+    z-index: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -75,12 +74,16 @@
 }
 
 .timerBar {
-    /* border-radius: 20px; */
     width: 100%;
     height: 100%;
-    /* background-color: rgb(107, 209, 107); */
     background-color: #FFCC01;
-    /* border-top-right-radius: 20px; */
-    /* border-bottom-right-radius: 20px; */
+    z-index: 1000;
+
+    /* width: 100vw;
+    height: 50px;
+    position: absolute;
+    bottom: 0px;
+    overflow: hidden;
+    overflow-x: hidden; */
 }
 
