--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ button:focus-visible {
   z-index: inherit;
   width: 100%;
   height: 47.5%;
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0);
 }
 
 .gitHubLinkDiv {
